--- a/style.css
+++ b/style.css
@@ -1,20 +1,24 @@
 body {
     background-color: #E7C6C8;
+    background: url(541374.jpg) no-repeat center center fixed;
+    grid-template-columns: 200px 250px;
+    grid-auto-rows: minmax(150px, auto);
+    grid-gap: 20px;
 }
 
 h1,
 h3,
 p {
-    color: #fefefe;
+    color: #f8f9f3;
 }
 
 h1,
 h3 {
-    font-family: "Oswald", sans-serif;
+    font-family: 'Jim Nightshade', cursive;
 }
 
 p {
-    font-family: "News Cycle", sans-serif;
+    font-family: 'Great Vibes', cursive;
 }
 
 .title {
@@ -24,7 +28,7 @@ p {
 }
 
 .studentlist {
-    padding: 2rem;
+    padding: 0rem;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
     grid-template-rows: auto;
@@ -33,23 +37,42 @@ p {
 }
 
 .person {
-    display: grid;
-    background-color: #ff8d63;
+    background-image: linear-gradient(to top right, #01455E, #e27787);
     padding: 10fr;
     margin: 50px;
     border-radius: 25px;
 }
 
 .button {
-    background-color: #ff8d63;
-    color: #fefefe;
-    border: 0.5px solid #002fdf;
+    background-color: #2d2d2e;
+    color: #f8f9f3;
     border-radius: 25px;
     font-family: "News Cycle", sans-serif;
+    margin-bottom: 25px;
 }
 
 .hide {
     display: none;
+}
+
+.theme1 {
+    --primary-color: #EEE117;
+    --secondary-color: #000000;
+}
+
+.theme2 {
+    --primary-color: #7f0909;
+    --secondary-color: #FFC500;
+}
+
+.theme3 {
+    --primary-color: #eee117;
+    --secondary-color: #000000;
+}
+
+.theme4 {
+    --primary-color: #aaaaaa;
+    --secondary-color: #0d6217;
 }
 
 .modal-background {
@@ -62,11 +85,16 @@ p {
     background-color: rgba(0, 0, 0, 0.7);
 }
 
-.modal-content {
-    background-color: #ff8d63;
-    border: 1px solid #7c1f17;
+#modalito {
+    background-color: var(--secondary-color);
+    border: 1px solid var(var(--secondary-color));
     margin: 1em;
     padding: 2em;
-    color: #002fdf;
+    color: var(--primary-color);
     text-align: center;
+}
+
+#modalito h1 {
+    margin-top: 0;
+    color: var(--secondary-color);
 }
